Bug 1111966 - Fix reporting of parsed and decoded frames for MP4Reader. r=cpearce, a=sledru